@@ -1,0 +1,9 @@
+Title: Disabling replication with a site did not clear the changes for this site (1.4.0i3 regression)
+Level: 1
+Component: wato
+Compatible: compat
+Version: 1.4.0i4
+Date: 1482335663
+Class: fix
+
+
